Fix event description wrap

--- a/frontend/src/components/layouts/OrganizerHomepage/EventCard/EventCard.module.scss
+++ b/frontend/src/components/layouts/OrganizerHomepage/EventCard/EventCard.module.scss
@@ -336,9 +336,9 @@
   margin: 0;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  text-wrap-mode: nowrap;
 }
 
 // Footer section
